# dsp-calc

./: .eslintrc.cjs  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  sw.js  vite.config.js
.github/workflows/: tauri_release.yml
assets/: game-data-DojSGthr.js  game-data-legacy-Cy9cmQrc.js  index-D8xupJ0c.css  index-Dh356TVd.js  index-legacy-UaQweMTP.js  polyfills-legacy-CtgSGhqi.js  reload_prompt-CDF_Kyxx.js  reload_prompt-legacy-BLviNRDu.js  vendor-icons-Bpa5N9Zc.js  vendor-icons-legacy-5d4DirXU.js
css/: App.css
src/: App.jsx  ThemeContext.jsx  batch_setting.jsx  contexts.jsx  global_state.jsx  header.jsx  icon.jsx  item_select.jsx  main.jsx  natural_production_line.jsx  needs_list.jsx  recipe.jsx  reload_prompt.jsx  result.jsx  scheme_data.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
