[package]
name = "dsp-calc"
version = "0.5.5"
description = "Dyson Sphere Program Production Calculator"
authors = []
license = "MIT"
repository = "https://github.com/hhhhhhhhhn/dsp-calc"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2.8.0"
